symmetric group performance